more sass spacing fixes

--- a/client/sass/activities.sass
+++ b/client/sass/activities.sass
@@ -108,5 +108,5 @@
         float: right
     .eventHeader
         text-align: center
-        margin-top: 2vh
+        margin-top: 2.7vh
         color: white
